<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:attr/activatedBackgroundIndicator">

    <TextView
        android:id="@+id/ensatIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:theme="@style/labelText"/>

    <TextView
        android:id="@+id/textViewEnsatId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ensatIdLabel" />


    <Space
        android:id= "@+id/sp1"
        android:layout_width= "23dp"
        android:layout_height="23dp"
        android:layout_toRightOf="@+id/textViewEnsatId" />

    <TextView
        android:id="@+id/bioIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/sp1"
        android:text="@string/score"
        android:theme="@style/labelText"/>

    <TextView
        android:id="@+id/textViewBioId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bioIdLabel"/>

    <Space
        android:id= "@+id/sp2"
        android:layout_width= "23dp"
        android:layout_height="23dp"
        android:layout_toRightOf="@+id/textViewBioId" />

    <TextView
        android:id="@+id/transferGroupIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/sp2"
        android:text="@string/disksEaten"
        android:theme="@style/labelText"/>

    <TextView
        android:id="@+id/textViewTransferGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/transferGroupIdLabel"/>


    <TextView
        android:id="@+id/materialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ensatIdLabel"
        android:text="@string/gameState"
        android:theme="@style/labelText"/>

    <TextView
        android:id="@+id/textViewMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEnsatId"
        android:layout_toRightOf="@+id/materialLabel"/>


</RelativeLayout>